--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "mongodb": "^5.7.0",
+        "multer": "^1.4.5-lts.1",
         "puppeteer": "^21.0.3",
         "tough-cookie": "^4.1.3"
     },
