--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 PORT=3000
-MONGODB_URI=mongodb+srv://your-mongodb-connection-string
+MONGODB_URI=mongodb+srv://mv:MdP92caMYXjpxsRo@cluster0.ljz6l.mongodb.net/
 DB_NAME=instagram_bot
 COLLECTION_NAME=processed_users
 WELCOME_MESSAGE=Thank you for following us! We appreciate your support.
