--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
         "node": ">=16.0.0"
     },
     "dependencies": {
+        "axios": "^1.9.0",
         "body-parser": "^1.20.2",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "form-data": "^4.0.2",
         "mongodb": "^5.7.0",
         "multer": "^1.4.5-lts.1",
         "puppeteer": "^21.0.3",
