--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
         "form-data": "^4.0.2",
         "mongodb": "^5.7.0",
         "multer": "^1.4.5-lts.1",
-        "puppeteer": "^21.0.3",
-        "tough-cookie": "^4.1.3"
+        "playwright": "^1.52.0"
     },
     "devDependencies": {
         "nodemon": "^3.0.1"
